# ennesults-rs

./: .gitignore  README.md  colors.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte  app.html  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: InsultTag.ts  SerializeRBGColor.ts
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: test.json
src-tauri/src/: bot.rs  changelog.rs  commands.rs  config.rs  database.rs  date.rs  file.rs  helpers.rs  main.rs  migrations.rs  twitch.rs  twitch_worker.rs  updater.rs
src-tauri/src/bot/: announcements.rs  auth.rs  bot.rs  bot_data.rs  bot_info.rs  client.rs  comebacks.rs  corrections.rs  insults.rs  message_thread.rs  mod.rs  settings.rs  users.rs  whispers.rs
src-tauri/src/bot/api/: chat_messages.rs  get_channel_status.rs  leave_channel.rs  mod.rs  users.rs
src-tauri/src/commands/: bot_api.rs  connect_to_channel.rs  consent.rs  diagnostic.rs  get_bot_state.rs  get_channel_status.rs  hello_world.rs  leave_channel.rs  lurk.rs  mod.rs  print_bot_data.rs  print_state.rs  say.rs  status.rs  test.rs  unconsent.rs  version.rs
src-tauri/src/commands/bot_api/: bot_info.rs  chat_messages.rs  comebacks.rs  mod.rs  whispers.rs
src-tauri/src/database/: init.rs
src-tauri/src/helpers/: date.rs  mod.rs  queue.rs  titlecase.rs
src/lib/: Greet.svelte  Title.svelte  colorPalettes.ts  notifications.ts  notificationsPanel.svelte  types.ts
src/lib/components/: Changelog.svelte  NumberTicker.svelte  editAnnouncement.svelte  editComeback.svelte  editInsult.svelte  editInsultTags.svelte  insultTags.svelte  speakAsEnnesults.svelte
src/lib/components/notifications/: notifications.ts  notificationsPanel.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-overlay.svelte
src/lib/components/ui/button/: index.ts
src/lib/components/ui/checkbox/: checkbox.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/announcements/: +page.svelte  data-table-actions.svelte  data-table.svelte
src/routes/comebacks/: +page.svelte  data-table-actions.svelte  data-table.svelte
src/routes/commands/: +page.svelte
src/routes/insults/: +page.svelte  data-table-actions.svelte  data-table.svelte
src/routes/settings/: +page.server.ts  +page.svelte  connect-to-twitch.svelte  schema.ts  settings-form.svelte  updater.svelte
src/routes/users/: +page.svelte  data-table-actions.svelte  data-table.svelte
(+13 files in other folders)
