[package]
name = "ennesults-rs"
version = "1.3.2"
description = "A Twitch bot created for Ennegineer to kindly insult her chat."
authors = ["Christian Payne"]
license = ""
repository = "https://github.com/ChristianPayne/ennesults-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
twitch_api = { version = "0.7.0-rc.8", features = ["all"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
twitch-irc = "5.0.1"
tauri-plugin-positioner = "2.0.0-rc"
tauri-plugin-window-state = { version = "2.0.0-rc" }
tauri-plugin-store = { version = "2.0.0-rc" }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
ts-rs = "10.0"
rand = "0.8.5"
thiserror = "2.0.3"
tauri-plugin-process = "2"
serde-inline-default = "0.2.3"
tauri-plugin-oauth = "2"
url-builder = "0.1.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
